--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,6 +5,11 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-with, initall-scale=1.0")
         title Noom 
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        hi It works!
+        //- hi It works!
+        header 
+            h1 Noom 
+        main 
+            h2 Welcome to Noom 
         script(src="/public/js/app.js")
