noom2_chat_ver0.1

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,5 +11,9 @@ html(lang="en")
         header 
             h1 Noom 
         main 
-            h2 Welcome to Noom 
+            //- h2 Welcome to Noom
+            u1
+            form
+                input(type="text",placeholder="white a msg")
+                button send 
         script(src="/public/js/app.js")
